Revision history for DBIx::Class

0.07999_01 2006-10-05 21:00:00
        - add connect_info option "disable_statement_caching"
        - create insert_bulk using execute_array, populate uses it
        - added DBIx::Class::Schema::load_namespaces, alternative to
          load_classes
        - added source_info method for source-level metadata (kinda like
          column_info)
        - Some of ::Storage::DBI's code/docs moved to ::Storage
        - DBIx::Class::Schema::txn_do code moved to ::Storage
        - Storage::DBI now uses exceptions instead of ->ping/->{Active} checks
        - Storage exceptions are thrown via the schema class's throw_exception
        - DBIx::Class::Schema::throw_exception's behavior can be modified via
          ->exception_action
        - columns_info_for is deprecated, and no longer runs automatically.
          You can make it work like before via
          __PACKAGE__->column_info_from_storage(1) for now
        - Replaced DBIx::Class::AccessorGroup and Class::Data::Accessor with
          Class::Accessor::Grouped. Only user noticible change is to 
          table_class on ResultSourceProxy::Table (i.e. table objects in 
          schemas) and, resultset_class and result_class in ResultSource. 
          These accessors no longer automatically require the classes when
          set.

0.07003 2006-11-16 11:52:00
        - fix for rt.cpan.org #22740 (use $^X instead of hardcoded "perl")
        - Tweaks to resultset to allow inflate_result to return an array
        - Fix UTF8Columns to work under Perl <= 5.8.0
        - Fix up new_result in ResultSet to avoid alias-related bugs
        - Made new/update/find handle 'single' rel accessor correctly
        - Fix NoBindVars to be safer and handle non-true bind values
        - Don't blow up if columns_info_for returns useless results
        - Documentation updates

0.07002 2006-09-14 21:17:32
        - fix quote tests for recent versions of SQLite